--- a/src/sass/components/_path.scss
+++ b/src/sass/components/_path.scss
@@ -1,11 +1,12 @@
 .path {
   @extend %container;
-  padding-top: 56px;
+  
 }
 
 .path__title {
   @extend %title;
   text-align: center;
+  padding-top: 56px;
 
   margin-bottom: 36px;
 
@@ -15,7 +16,8 @@
 }
 
 .path__img {
-  width: 100%;
+  width: 290px;
+  margin: 0 auto;
   margin-bottom: 56px;
   box-shadow: 0px 20px 32px 0px rgba(0, 0, 0, 0.17);
 }
@@ -23,18 +25,25 @@
 .path__list {
   @extend %list;
   @include font-mixin("OpenSans_SmB", 0.88rem, $header-color);
+  margin-bottom: 62px;
 }
 
 .path__item {
   @include font-mixin("OpenSans_SmB", 0.88rem, $header-color);
   position: relative;
-  padding-left: 120px;
+  width: 290px;
+  padding-left: 98px;
   min-height: 90px;
-  margin-bottom: 40px;
+  margin: 0 auto;
+  
+  &:not(:last-of-type){
+    margin-bottom: 40px;
+  }
 
   &::before {
     @include before(attr(data-title), flex);
     @include font-mixin("Ubuntu-mono_B", 2.5rem, $header-color);
+    line-height: 1.25rem;
     align-items: center;
     justify-content: center;
     left: 0;
@@ -82,6 +91,10 @@
   &--bg-blue {
     background-color: $main-blue;
   }
+
+  // &--768-blue{
+  //   display: block;
+  // }
 }
 
 .path__link {
