--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -1,12 +1,11 @@
 .vacancies {
   @extend %container;
-  padding-top: 66px;
   background-image: url(../img/bg-grey.jpg);
-  padding-bottom: 62px;
 }
 
 .vacancies__box-info {
   @include flex(column, space-between, center);
+  padding-top: 66px;
   margin-bottom: 36px;
 }
 
@@ -42,6 +41,7 @@
 
 .vacancies__list {
   @extend %list;
+  padding-bottom: 62px;
 
   .vacancies__item:not(:last-child) {
     margin-bottom: 32px;
@@ -55,7 +55,7 @@
   background-color: $white;
   box-shadow: 0px 15px 32px 0px rgba(0, 0, 0, 0.16);
   width: 267px;
-  height: 267px;
+  min-height: 267px;
   margin: 0 auto;
   padding: 15px;
 }
@@ -95,31 +95,33 @@
 
   &--fullstack {
     &::before {
-      background-image: url(../img/coding_1.png);
+      background-image: url(../img/vacancies/coding.svg);
+      width: 58px;
+      height: 58px;
     }
   }
 
   &--front-end {
     &::before {
-      background-image: url(../img/code.png);
+      background-image: url(../img/vacancies/code.svg);
     }
   }
 
   &--back-end {
     &::before {
-      background-image: url(../img/coding_2.png);
+      background-image: url(../img/vacancies/coding-1.svg);
     }
   }
 
   &--web-developer {
     &::before {
-      background-image: url(../img/wordpress.png);
+      background-image: url(../img/vacancies/wordpress.svg);
     }
   }
 
   &--html-coder {
     &::before {
-      background-image: url(../img/website.png);
+      background-image: url(../img/vacancies/multimedia.svg);
     }
   }
 
@@ -149,18 +151,19 @@
 
   &--number {
     color: $main-blue;
-    font-size: 1.5rem;
-    position: relative;
+    font-size: 1.375rem;
+    border-bottom: 2px $black solid;  
+    // position: relative;
 
-    &::before {
-      @include before("", block);
-      background-color: $main-blue;
-      background-color: $header-color;
-      right: 0;
-      bottom: 2px;
-      width: 100%;
-      height: 2px;
-    }
+    // &::before {
+    //   @include before("", block);
+    //   background-color: $main-blue;
+    //   background-color: $header-color;
+    //   right: 0;
+    //   bottom: 2px;
+    //   width: 100%;
+    //   height: 2px;
+    // }
   }
 }
 
@@ -178,7 +181,7 @@
   border: none;
   border-radius: 5px;
   background-image: linear-gradient(
-    0deg,
+    90deg,
     rgb(255, 198, 23) 0%,
     rgb(251, 7, 64) 100%
   );
@@ -208,7 +211,3 @@
     font-family: "Ubuntu-mono_B";
   }
 }
-// ._по_данным_26_03_2018_по_Украине {
-//   line-height: 2;
-//   text-align: center;
-// }
