--- a/src/sass/helpers/placeholders.scss
+++ b/src/sass/helpers/placeholders.scss
@@ -1,14 +1,21 @@
 %container{
+  min-width: 320px;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
+
+  @media (min-width: 320px) {
+    max-width: 767.98px;
+  }
 }
 
 %title {
+  max-width: 530px;
   font-family: "Museo_900";
   text-transform: uppercase;
   font-size: 1.56rem;
   line-height: 1.87rem;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -16,7 +23,7 @@
 %list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 }
 
 %subtitle{
@@ -30,7 +37,8 @@
 %underline{
   background-color: $header-color;
   bottom: -10px;
-  right: 30%;
+  right: 50%;
+  transform: translateX(50%);
   width: 150px;
   height: 2px;
 }
