--- a/src/sass/components/_employment.scss
+++ b/src/sass/components/_employment.scss
@@ -4,10 +4,22 @@
   padding-bottom: 60px;
 }
 
+.employment__wrapper {
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    width: 570px;
+  }
+}
+
 .employment__box-info {
   @include flex(column, space-between, center);
   padding-top: 40px;
   margin-bottom: 36px;
+
+  @media (min-width: 768px) {
+    padding-top: 92px;
+  }
 }
 
 .employment__underline {
@@ -15,6 +27,10 @@
   margin-bottom: 36px;
   margin: 0;
   margin-bottom: 26px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 66px;
+  }
 }
 
 .employment__subtitle {
@@ -24,6 +40,11 @@
 
   &--blue {
     color: $main-blue;
+  }
+
+  @media (min-width: 768px) {
+    text-align: left;
+    align-self: flex-start;
   }
 }
 
@@ -40,6 +61,16 @@
     @include before("", block);
     @extend %underline;
     background-color: $main-blue;
+
+    @media (min-width: 768px) {
+      width: 500px;
+      bottom: -14px;
+      // left: 0;
+    }
+  }
+
+  @media (min-width: 768px) {
+    width: 500px;
   }
 }
 
@@ -48,22 +79,67 @@
   width: 72%;
   margin: 0;
   margin-bottom: 40px;
+
+  @media (min-width: 768px) {
+    display: block;
+    font-size: 1.5rem;
+    line-height: 1.875rem;
+    color: $dark;
+    background-color: $white;
+    width: 583px;
+    margin-bottom: 70px;
+  }
 }
 
 .employment__perspective-list {
   @extend %list;
+  position: relative;
   color: $white;
   margin-bottom: 54px;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .employment__perspective-item {
   &:first-of-type {
     margin-bottom: 40px;
     width: 72%;
+
+    @media (min-width: 768px) {
+      width: 222px;
+      margin-right: 54px;
+
+      &::before {
+        @include before("", block);
+        background-image: url(../img/decor-element.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        left: -92px;
+        top: -58px;
+        width: 58px;
+        height: 76px;
+      }
+
+      &::after {
+        @include before("", block);
+        background-color: $white;
+        opacity: 0.6;
+        left: -66px;
+        top: -22px;
+        width: 600px;
+        height: 1px;
+      }
+    }
   }
 
   &:nth-of-type(2) {
     width: 90%;
+
+    @media (min-width: 768px) {
+      width: 420px;
+    }
   }
 }
 
@@ -74,6 +150,10 @@
   line-height: 1.714;
   text-align: left;
   margin: 0;
+
+  @media (min-width: 768px) {
+    padding-left: 0;
+  }
 
   &--bold {
     font-family: OpenSans_ExB;
@@ -87,24 +167,42 @@
       border-radius: 50%;
       background-color: rgb(0, 188, 212);
       box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.35);
-      left: 0;
-      top: 8px;
+      left: -2px;
+      top: -30px;
       width: 17px;
       height: 17px;
+      z-index: 10;
     }
   }
 }
 
 .guarantee {
-  // @extend %container;
   @include font-mixin("OpenSans_SmB", 0.88rem, $light-smoke2);
   background-color: $dark-smoke3;
-  padding: 10px;
+  padding: 16px;
+  padding-top: 36px;
+
+  @media (min-width: 768px) {
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 54px;
+    box-shadow: 0px 15px 36px 0px rgba(0, 0, 0, 0.17);
+  }
 }
 
 .guarantee__text {
-  color: transparent;
-  margin: 0;
+  display: none;
+  // margin: 0;
+
+  @media (min-width: 768px) {
+    display: block;
+    @include font-mixin("Ubuntu-mono_B", 9.375rem, $dark-smoke3);
+    padding-left: 0;
+    line-height: 1.2;
+    text-shadow: 0px 18px 11px rgba(0, 0, 0, 0.14);
+    text-align: right;
+    margin: 0;
+  }
 }
 
 .guarantee__about {
@@ -131,6 +229,15 @@
   &:not(:last-of-type) {
     margin-bottom: 30px;
   }
+
+  @media (min-width: 768px) {
+    background-color: $dark2;
+    box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.14);
+    padding-top: 42px;
+    margin-left: 32px;
+    width: 502px;
+    min-height: 101px;
+  }
 }
 
 .employment__guarantee-title {
@@ -144,18 +251,27 @@
     top: -16px;
     width: 103px;
     height: 1px;
+    @media (min-width: 768px) {
+      left: -30px;
+      top: 24px;
+    }
   }
-}
 
-.employment__guarantee-about {
-  margin: 0;
-
-  &::before {
+  &::after {
     @include before(attr(data-title), flex);
     @include font-mixin("Ubuntu-mono_B", 1.5rem, $main-blue);
     align-items: center;
     justify-content: center;
     left: 0;
     top: -6px;
+    @media (min-width: 768px) {
+      left: -34px;
+      top: 48%;
+      transform: translatey(-50%);
+    }
   }
+}
+
+.employment__guarantee-about {
+  margin: 0;
 }
