--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -1,6 +1,27 @@
 .vacancies {
   @extend %container;
+  @media (min-width: 768px) {
+    background-image: url(../img/bg-grey.jpg);
+    position: relative;
+  }
+}
+
+.vacancies__wrapper {
+  margin: 0 auto;
   background-image: url(../img/bg-grey.jpg);
+  @media (min-width: 768px) {
+    box-shadow: 0px 20px 32px 0px rgba(0, 0, 0, 0.17);
+    width: 698px;
+
+    &::before {
+      @include before("", block);
+      height: 45px;
+      color: $white;
+      width: 100%;
+      left: 0;
+      top: 0;
+    }
+  }
 }
 
 .vacancies__box-info {
@@ -27,6 +48,14 @@
   &::before {
     @include before("", block);
     @extend %underline;
+
+    @media (min-width: 768px) {
+      bottom: -53px;
+      right: 158px;
+      transform: none; 
+      width: 250px;
+      height: 2px;
+    }
   }
 }
 
@@ -36,6 +65,9 @@
 
   &--black {
     color: $main-blue;
+    @media (min-width: 768px) {
+      background-color: $header-color;
+    }
   }
 }
 
@@ -43,8 +75,14 @@
   @extend %list;
   padding-bottom: 62px;
 
-  .vacancies__item:not(:last-child) {
-    margin-bottom: 32px;
+  @media (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    padding-left: 64px;
+    padding-right: 64px;
+    margin-bottom: 0;
   }
 }
 
@@ -58,6 +96,19 @@
   min-height: 267px;
   margin: 0 auto;
   padding: 15px;
+
+  &:not(:last-of-type) {
+    margin-bottom: 32px;
+  }
+
+  @media (min-width: 768px) {
+    margin: 0;
+
+    &:nth-last-of-type(2) {
+      margin-bottom: 0;
+      order: 1;
+    }
+  }
 }
 
 .vacancies__item-caption {
@@ -152,7 +203,7 @@
   &--number {
     color: $main-blue;
     font-size: 1.375rem;
-    border-bottom: 2px $black solid;  
+    border-bottom: 2px $black solid;
     // position: relative;
 
     // &::before {
