--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -1,26 +1,31 @@
 .vacancies {
-  @extend %container;
+  position: relative;
+  background-image: url(../img/bg-grey.jpg);
   @media (min-width: 768px) {
-    background-image: url(../img/bg-grey.jpg);
-    position: relative;
+    margin-bottom: 122px;
+    box-shadow: inset 0px -97px 0px 0px $white,
+    inset 0px 45px 0px 0px $white;
+
   }
 }
 
+// .vacancies__background{
+//   width: 100%;
+//   height: 100%;
+//   @media (min-width: 768px) {
+//     background-image: url(../img/bg-grey.jpg);
+//   }
+  
+// }
+
 .vacancies__wrapper {
+  @extend %container;
+  position: relative;
   margin: 0 auto;
   background-image: url(../img/bg-grey.jpg);
   @media (min-width: 768px) {
     box-shadow: 0px 20px 32px 0px rgba(0, 0, 0, 0.17);
     width: 698px;
-
-    &::before {
-      @include before("", block);
-      height: 45px;
-      color: $white;
-      width: 100%;
-      left: 0;
-      top: 0;
-    }
   }
 }
 
@@ -79,10 +84,27 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-    padding-left: 64px;
-    padding-right: 64px;
     margin-bottom: 0;
+    padding-left: 26px;
+    padding-right: 26px;
+    
+    &::after{
+      @include before("", block);
+      height: 430px;
+      width: 16px;
+      right: -16px;
+      bottom: -16px;
+      background-image: url(../img/bg-green.jpg);
+    }  
+
+    &::before{
+      @include before("", block);
+      height: 16px;
+      width: 630px;
+      right: -16px;
+      bottom: -16px;
+      background-image: url(../img/bg-green.jpg);
+    }  
   }
 }
 
