--- a/src/sass/helpers/placeholders.scss
+++ b/src/sass/helpers/placeholders.scss
@@ -4,14 +4,14 @@
   padding-right: 15px;
   margin: 0 auto;
 
-  @media (min-width: 320px) {
-    // max-width: 767.98px;
-  }
-
   @media (min-width: 768px) and (max-width: 1919.98px){
-    // max-width: 1919.98px;
     padding-left: 40px;
     padding-right: 40px;
+  }
+
+  @media (min-width: 1920px){
+    padding-left: 80px;
+    padding-right: 80px;
   }
 }
 
