--- a/src/sass/components/_employment.scss
+++ b/src/sass/components/_employment.scss
@@ -1,7 +1,12 @@
 .employment {
   @extend %container;
-  background-image: url(../img/bg-dark.jpg);
+  background-image: url(../img/employment/bg_sec_9_1920.jpg);
   padding-bottom: 60px;
+
+  @media (min-width: 1920px) {
+    background-repeat: repeat-x;
+    background-position: center top 70px;
+  }
 }
 
 .employment__wrapper {
@@ -10,6 +15,14 @@
   @media (min-width: 768px) {
     width: 570px;
   }
+
+  @media (min-width: 1920px) {
+    display: flex;
+    width: 1200px;
+  }
+}
+
+.employment__box {
 }
 
 .employment__box-info {
@@ -31,6 +44,10 @@
   @media (min-width: 768px) {
     margin-bottom: 66px;
   }
+
+  @media (min-width: 1920px) {
+    align-self: flex-start;
+  }
 }
 
 .employment__subtitle {
@@ -45,6 +62,12 @@
   @media (min-width: 768px) {
     text-align: left;
     align-self: flex-start;
+  }
+
+  @media (min-width: 1920px) {
+    font-size: 1.125rem;
+    line-height: 1.875rem;
+    max-width: 500px;
   }
 }
 
@@ -66,10 +89,23 @@
       width: 500px;
       bottom: -14px;
     }
+
+    @media (min-width: 1920px) {
+      width: 600px;
+      height: 4px;
+      bottom: -28px;
+      left: 0;
+      transform: none;
+    }
   }
 
   @media (min-width: 768px) {
     width: 500px;
+  }
+
+  @media (min-width: 1920px) {
+    text-align: left;
+    width: 390px;
   }
 }
 
@@ -112,11 +148,11 @@
 
       &::before {
         @include before("", block);
-        background-image: url(../img/decor-element.png);
+        background-image: url(../img/employment/decor-element_sec_9.png);
         background-repeat: no-repeat;
         background-position: center;
         left: -92px;
-        top: -58px;
+        top: -52px;
         width: 58px;
         height: 76px;
       }
@@ -125,9 +161,29 @@
         @include before("", block);
         background-color: $white;
         opacity: 0.6;
-        left: -66px;
+        right: 0;
         top: -22px;
-        width: 600px;
+        width: 636px;
+        height: 1px;
+        
+      }
+    }
+
+    @media (min-width: 1920px) {
+      width: 180px;
+
+      &::before {
+        background-image: url(../img/employment/decor-element_sec_9_1920.png);
+        left: -264px;
+        top: -62px;
+        width: 75px;
+        height: 99px;
+      }
+
+      &::after {
+        left: -231px;
+        top: -22px;
+        width: 810px;
         height: 1px;
       }
     }
@@ -138,6 +194,10 @@
 
     @media (min-width: 768px) {
       width: 420px;
+    }
+
+    @media (min-width: 1920px) {
+      width: 340px;
     }
   }
 }
@@ -152,6 +212,11 @@
 
   @media (min-width: 768px) {
     padding-left: 0;
+  }
+
+  @media (min-width: 1920px) {
+    font-size: 1rem;
+    line-height: 1.624rem;
   }
 
   &--bold {
@@ -175,7 +240,7 @@
   }
 }
 
-.guarantee {
+.employment__guarantee {
   @include font-mixin("OpenSans_SmB", 0.88rem, $light-smoke2);
   background-color: $dark-smoke3;
   padding: 16px;
@@ -188,9 +253,14 @@
     padding-left: 54px;
     box-shadow: 0px 15px 36px 0px rgba(0, 0, 0, 0.17);
   }
+
+  @media (min-width: 1920px) {
+    padding-top: 190px;
+    width: 570px;
+  }
 }
 
-.guarantee__text {
+.employment__guarantee-text {
   display: none;
 
   @media (min-width: 768px) {
@@ -204,10 +274,15 @@
     text-shadow: 0px 18px 11px rgba(0, 0, 0, 0.14);
     text-align: right;
     margin: 0;
+
+    @media (min-width: 1920px) {
+      font-size: 12.5rem;
+      line-height: 1.2;
+    }
   }
 }
 
-.guarantee__about {
+.employment__guarantee-about {
   line-height: 1.5;
   width: 85%;
   margin: 0;
@@ -225,6 +300,13 @@
       top: 14px;
       left: -62px;
       transform: rotate(90deg);
+
+      @media (min-width: 1920px) {
+        top: 137px;
+        left: -82px;
+        font-size: 2.5rem;
+        line-height: 1.2;
+      }
     }
 
     &::after {
@@ -233,7 +315,19 @@
       top: 142px;
       right: -75px;
       transform: rotate(90deg);
+
+      @media (min-width: 1920px) {
+        top: 302px;
+        right: -86px;
+        font-size: 1.625rem;
+        line-height: 1.2;
+      }
     }
+  }
+
+  @media (min-width: 1920px) {
+    font-size: 1.125rem;
+    line-height: 1.625rem;
   }
 }
 
@@ -248,6 +342,10 @@
 
   &:not(:last-of-type) {
     margin-bottom: 30px;
+
+    @media (min-width: 1920px) {
+      margin-bottom: 10px;
+    }
   }
 
   @media (min-width: 768px) {
@@ -264,6 +362,11 @@
   @include font-mixin("Ubuntu-mono_B", 1rem, $white);
   margin: 0;
 
+  @media (min-width: 1920px) {
+    font-size: 1.375rem;
+    line-height: 1.2;
+  }
+
   &::before {
     @include before("", block);
     background-color: $main-blue;
@@ -271,6 +374,7 @@
     top: -16px;
     width: 103px;
     height: 1px;
+
     @media (min-width: 768px) {
       left: -30px;
       top: 24px;
@@ -292,6 +396,13 @@
   }
 }
 
-.employment__guarantee-about {
+.employment__guarantee-help {
+  @include font-mixin("OpenSans_ExB", 0.875rem, $light-smoke2);
+  line-height: 1.25rem;
   margin: 0;
+
+  @media (min-width: 1920px) {
+    font-size: 1rem;
+    line-height: 1.625rem;
+  }
 }
