--- a/src/sass/helpers/placeholders.scss
+++ b/src/sass/helpers/placeholders.scss
@@ -10,6 +10,7 @@
   }
 
   @media (min-width: 1920px){
+    min-width: 1920px;
     padding-left: 80px;
     padding-right: 80px;
   }
@@ -28,7 +29,12 @@
     font-size: 1.875rem;
     line-height: 2.5rem;
   }
-}
+  
+  @media (min-width: 1920px) {
+    font-size: 2.625rem;
+    line-height: 3.125rem;
+  }
+  }
 
 %list {
   list-style: none;
