--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -1,14 +1,16 @@
 .vacancies {
   position: relative;
   background-image: url(../img/bg_grey.jpg);
+
   @media (min-width: 768px) {
-    margin-bottom: 122px;
-    box-shadow: inset 0px -97px 0px 0px $white, inset 0px 45px 0px 0px $white;
+    margin-bottom: 0;
+    padding-bottom: 122px;
+    // background-position: top 50px left 0, top 0 right 364px;
+    background: url(../../img/bg_green.jpg) bottom 108px right 474px no-repeat,url(../img/vacancies/bg_grey_sec_8_720.jpg) 50% repeat-x;
   }
 
   @media (min-width: 1920px) {
     box-shadow: none;
-    margin-bottom: 0;
     background-image: none;
   }
 }
@@ -22,14 +24,17 @@
   @media (min-width: 768px) {
     box-shadow: 0px 20px 32px 0px rgba(0, 0, 0, 0.17);
     width: 698px;
+    background: url(../img/vacancies/bg_grey_sec_8_720.jpg);
+    
   }
 
   @media (min-width: 1920px) {
     box-shadow: none;
-    background-position: top 50px left 0,top 0 right 364px,bottom 100px right 276px,bottom 134px left 435px;
+    background-position: top 50px left 0, top 0 right 364px,
+      bottom 100px right 276px, bottom 134px left 435px;
     background-repeat: no-repeat;
     background-image: url(../img/vacancies/bg_sec_8_1920.png),
-      url(../img/vacancies/bg_sec_8.2_1920.png), url(../img/bg_grey.jpg),
+      url(../img/vacancies/bg_green_sec_8_1920.png), url(../img/bg_grey.jpg),
       url(../img/bg_green.jpg);
   }
 }
@@ -86,7 +91,7 @@
   @include font-mixin("Museo_900", 0.88rem, $header-color);
   @extend %subtitle;
 
-  @media (min-width: 768px) {
+  @media (min-width: 1920px) {
     font-size: 1.125rem;
     line-height: 1.875rem;
     text-align: right;
@@ -111,27 +116,6 @@
     margin-bottom: 0;
     padding-left: 26px;
     padding-right: 26px;
-
-    &::after {
-      @include before("", block);
-      height: 430px;
-      width: 16px;
-      right: -16px;
-      bottom: -16px;
-      background-image: url(../img/bg_green.jpg);
-      height: 430px;
-      width: 16px;
-      background-image: url(../img/bg-green.jpg);
-    }
-
-    &::before {
-      @include before("", block);
-      height: 16px;
-      width: 630px;
-      right: -16px;
-      bottom: -16px;
-      background-image: url(../img/bg_green.jpg);
-    }
   }
 
   @media (min-width: 1920px) {
@@ -140,20 +124,6 @@
     padding-right: 0;
     padding-top: 142px;
     padding-bottom: 200px;
-
-    &::before {
-      height: 458px;
-      width: 30px;
-      right: 408px;
-      top: 0px;
-    }
-
-    &::after {
-      height: 458px;
-      width: 30px;
-      right: 408px;
-      top: 0px;
-    }
   }
 }
 
