--- a/src/sass/components/_vacancies.scss
+++ b/src/sass/components/_vacancies.scss
@@ -19,7 +19,7 @@
     padding-bottom: 18px;
     width: 734px;
     margin: 0 auto;
-    background: url(../../img/bg_green.jpg) bottom right no-repeat;
+    background: url(../img/bg_green.jpg) bottom right no-repeat;
   }
 }
 
