--- a/src/sass/components/_path.scss
+++ b/src/sass/components/_path.scss
@@ -8,7 +8,7 @@
 
   @media (min-width: 1920px) {
     background-image: url(../img/path/bg_sec_7_1920.png);
-    background-position: 78% 48px;
+    background-position: 78% 156px;
     background-size: 54%;
   }
 
@@ -67,13 +67,14 @@
   box-shadow: 0px 20px 32px 0px rgba(0, 0, 0, 0.17);
 
   @media (min-width: 768px) {
-    width: 362px;
+    width: 358px;
     position: absolute;
     top: 0;
     right: 0;
   }
 
   @media (min-width: 1920px) {
+    height: auto;
     width: 654px;
   }
 }
