--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -7,7 +7,7 @@ $dark-smoke: rgba(#2b2a2f, 1);
 $dark-smoke2: #231e1f;
 $header-color: #242427;
 
-
+// adds for bloсs 7-9 
 $dark-smoke3: #313133;
 $black: rgba(#000000, 1);
 $red: #fb1c3e;
