--- a/src/sass/helpers/placeholders.scss
+++ b/src/sass/helpers/placeholders.scss
@@ -4,7 +4,7 @@
   padding-right: 15px;
   margin: 0 auto;
 
-  @media (min-width: 768px) and (max-width: 1919.98px) {
+  @media (min-width: 768px) {
     padding-left: 40px;
     padding-right: 40px;
   }
